--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
      <div class="from">
-        <h1>Youtube video Downloader</h1>
+        <h1>Youtube videos & Mp3 Downloader</h1>
         <input type="text" class="link" placeholder="video Link"/>
         <select class="format" required="">
             <option disabled="" selected="">Select Video Format</option>
