--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <p class="dev">Developed by Kaveesha Nethum</p>
 
         <button class="btn" onclick="download()">Start</button><br/><br/>
+         
+         <span class="ver">1.0.1 Version</span>
 
         <div class="result1"></div>
         <div class="result2"></div>
